Fix overflow issue

--- a/src/form.scss
+++ b/src/form.scss
@@ -1,6 +1,6 @@
 .ip-form {
   margin: 0;
-  padding: 6%;
+  padding: 4%;
   position: relative;
   text-align: center;
   background-image: url('./images/pattern-bg-desktop.png');
@@ -8,20 +8,23 @@
   h1 {
     color: whitesmoke;
   }
-  button {
-    background-color: black;
-    border: none;
-    padding: 9px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-  }
-  input  {
-    padding: 10px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    width: 30%;
-    margin-bottom: 8vh;
-    border: none;
+  form{
+    margin-bottom: 3%;
+    button {
+      background-color: black;
+      border: none;
+      padding: 9px;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+    }
+    input  {
+      padding: 10px;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      width: 30%;
+      margin-bottom: 8vh;
+      border: none;
+    }
   }
   .ip-data {
     position: absolute;
@@ -33,7 +36,7 @@
     top: 100%;
     left: 50%;
     width: 75%;
-    padding: 4% 2vw;
+    padding: 2% 2vw;
     justify-content: center;
     transform: translate(-50%, -50%);
     color:  hsl(0, 0%, 17%);
@@ -57,8 +60,9 @@
     h4 {
         margin: 0;
         padding: 0;
-        font-size: 22px;
+        font-size: 18px;
         font-weight: 700;
+        text-wrap: wrap;
     }
    }
   }
